--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,4 @@
 
 # Project target.
 target=android-8
+android.library.reference.1=../../../../tools/android/JakeWharton-Android-ViewPagerIndicator-8cd549f/library
