--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,6 @@
 #proguard.config=${sdk.dir}\tools\proguard\proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-8
-android.library.reference.1=../../../../tools/android/JakeWharton-Android-ViewPagerIndicator-8cd549f/library
+target=android-17
+android.library.reference.1=../tools/Android-ViewPagerIndicator-master/library
+
