--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,5 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".PositioningService" android:exported="false"/>
+
     </application>
 </manifest> 
