--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.indoornavi"
-    android:versionCode="1"
-    android:versionName="1.0">
+          package="com.indoornavi"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk
-        android:minSdkVersion="4"
-        android:targetSdkVersion="16" />
+            android:minSdkVersion="4"
+            android:targetSdkVersion="16"/>
 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:label="@string/app_name">
         <activity
-            android:name=".PagerActivity"
-            android:label="Blabla">
+                android:name=".PagerActivity"
+                android:label="Blabla">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <service android:name=".service.PositioningService" android:exported="false"/>
+        <service android:name=".service.PositioningService" android:exported="false"
+                 android:process=":PositioningService"/>
 
     </application>
 </manifest> 
