--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,9 @@
     <application android:label="@string/app_name">
         <activity
                 android:name=".PagerActivity"
-                android:label="Blabla">
+                android:label="NAVI"
+                android:screenOrientation="portrait"
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
